# noodle_cli

./: CMakeLists.txt  README.md
headers/: cliDisplay.h  cliSession.h  colours.h  definitions.h  exporter.h  helpers.h  importer.h  interactive.h
headers/core wrappers/: basic.h  layer.h  manipulations.h  navigation.h  selection.h  utilities.h
includes/noodlecore/: doodle.h  includes.h  multiplexGraph.h  noodlecore.h  returnType.h
noodlecore/: CMakeLists.txt  README.md
noodlecore/headers/: helpers.h  torch.h
noodlecore/include/: doodle.h  multiplexGraph.h  noodlecore.h
noodlecore/source/: basicManipulations.cpp  helpers.cpp  layer.cpp  manipulations.cpp  multiplexGraph.cpp  navigation.cpp  selection.cpp  utilities.cpp
source/: cliDisplay.cpp  cliSession.cpp  exporter.cpp  helpers.cpp  importer.cpp  interactive.cpp  main.cpp
source/core wrappers/: basic.cpp  layer.cpp  manipulations.cpp  navigation.cpp  selection.cpp  utilities.cpp
